Tools/Era/SDK/era.h


typedef int int32_bool;
typedef char* static_str;
typedef char* era_str;
typedef char* temp_str;
struct THookContext
{
  int EDI, ESI, EBP, ESP, EBX, EDX, ECX, EAX;
  int RetAddr;
};
typedef int32_bool (__stdcall *THookHandler) (THookContext* Context);
struct TEvent
{
  char* Name;
  void* Data;
  int   DataSize;
};
typedef void (__stdcall *TEventHandler) (TEvent* Event);
struct TGameState
{
  int RootDlgId;
  int CurrentDlgId;
};
typedef char TErmZVar[512];
typedef int TXVars[16];
ERA_API void (__stdcall *RegisterHandler) (TEventHandler Handler, const char* EventName);
ERA_API void (__stdcall *FireEvent) (const char* EventName, void* EventData, int DataSize);
ERA_API int (__stdcall *SetLanguage) (const char* NewLanguage);
ERA_API void (__stdcall *ReloadLanguageData) ();
static_str tr (const char* key);
std::string tr(const char* key, const std::vector<std::string>& params);
ERA_API temp_str (__stdcall *trTemp) (const char* key, const char** params, int LastParamsIndex);
ERA_API static_str (__stdcall *trStatic) (const char* key);
ERA_API int (__stdcall *AllocErmFunc) (const char* EventName, int EventId);
ERA_API void (__stdcall *FireErmEvent) (int EventId);
ERA_API void (__stdcall *ExecErmCmd) (const char* CmdStr);
ERA_API void (__stdcall *ExtractErm) ();
ERA_API void (__stdcall *ReloadErm) ();
ERA_API void (__stdcall *NameTrigger) (int TriggerId, const char *Name);
ERA_API void* (__stdcall *PersistErmCmd) (const char* CmdStr);
ERA_API void (__stdcall *ExecPersistedErmCmd) (void* PersistedCmd);
ERA_API void (__stdcall *ShowErmError) (const char *Error);
ERA_API TXVars* (__stdcall *GetArgXVars) ();
ERA_API TXVars* (__stdcall *GetRetXVars) ();
ERA_API era_str (__stdcall *GetTriggerReadableName) (int TriggerId);
ERA_API int (__stdcall *GetAssocVarIntValue) (const char* VarName);
ERA_API era_str (__stdcall *GetAssocVarStrValue) (const char* VarName);
ERA_API void (__stdcall *SetAssocVarIntValue) (const char* VarName, int NewValue);
ERA_API void (__stdcall *SetAssocVarStrValue) (const char* VarName, const char* NewValue);
ERA_API int* v;		
ERA_API TErmZVar* z;
ERA_API int* y;	
ERA_API int* x;		
ERA_API bool* f;	
ERA_API float* e;	
ERA_API int (__stdcall *GetEraRegistryIntValue) (const char* VarName);
ERA_API era_str (__stdcall *GetEraRegistryStrValue) (const char* VarName);
ERA_API void (__stdcall *SetEraRegistryIntValue) (const char* VarName, int NewValue);
ERA_API void (__stdcall *SetEraRegistryStrValue) (const char* VarName, const char* NewValue);
typedef int32_bool (__stdcall *TIsCommanderId) (int MonId);
ERA_API TIsCommanderId (__stdcall *SetIsCommanderIdFunc) (TIsCommanderId NewImpl);
typedef int32_bool (__stdcall *TIsElixirOfLifeStack) (uint8_t* BattleStack);
ERA_API TIsElixirOfLifeStack (__stdcall *SetIsElixirOfLifeStackFunc) (TIsElixirOfLifeStack NewImpl);
ERA_API int32_bool (__stdcall *IsCommanderId) (int32_t MonId);
ERA_API int32_bool (__stdcall *IsCampaign) ();
ERA_API era_str (__stdcall *GetCampaignFileName) ();
ERA_API era_str (__stdcall *GetMapFileName) ();
ERA_API int32_bool (__stdcall *FindNextObject) (int ObjType, int ObjSubtype, int* x, int *y, int*z, ESearchDirection Direction);
ERA_API void (__stdcall *ClearAllIniCache) ();
ERA_API void (__stdcall *ClearIniCache) (const char* FileName);
ERA_API int32_bool (__stdcall *ReadStrFromIni) (const char* Key, const char* SectionName, const char* FilePath, char* ResultBuffer);
ERA_API int32_bool (__stdcall *WriteStrToIni) (const char* Key, const char* Value, const char* SectionName, const char* FilePath);
ERA_API int32_bool (__stdcall *SaveIni) (const char* FilePath);
ERA_API void* (__stdcall *HookCode) (void* Addr, THookHandler HandlerFunc, void** AppliedPatch);
ERA_API void* (__stdcall *Splice) (void* OrigFunc, void* HandlerFunc, int CallingConv, int NumArgs, int* CustomParam, void** AppliedPatch);
ERA_API void (__stdcall *WriteAtCode) (int Count, void* Src, void* Dst);
ERA_API int (__stdcall *CalcHookPatchSize) (void* pointer);
ERA_API void (__stdcall *RollbackAppliedPatch) (void* pointer);
ERA_API void (__stdcall *FreeAppliedPatch) (void* pointer);
ERA_API void (__stdcall *FatalError) (const char* Err);
ERA_API void (__stdcall *NotifyError) (const char* error);
ERA_API void (__stdcall *GenerateDebugInfo) ();
ERA_API int (__stdcall *GetVersionNum) ();
ERA_API void (__stdcall *ReportPluginVersion) (const char* VersionLine);
ERA_API static_str (__stdcall *GetProcessGuid) ();
ERA_API void (__stdcall *GetGameState) (TGameState* GameState);
ERA_API void (__stdcall *WriteSavegameSection) (int DataSize, void* Data, const char* SectionName);
ERA_API int (__stdcall *ReadSavegameSection) (int DataSize, void* Data, const char* SectionName);
ERA_API int (__stdcall *GetButtonID) (const char* ButtonName);
ERA_API int32_bool (__stdcall *PatchExists) (const char* PatchName);
ERA_API int32_bool (__stdcall *PcxPngExists) (const char* PcxName);
ERA_API int32_bool (__stdcall *PluginExists) (const char* PluginName);
ERA_API void (__stdcall *RedirectFile) (const char* OldFileName, const char* NewFileName);
ERA_API void (__stdcall *GlobalRedirectFile) (const char* OldFileName, const char* NewFileName);
ERA_API static_str (__stdcall *ToStaticStr) (const char* Str);
ERA_API void (__stdcall *MemFree) (const void* buf);
ERA_API void (__stdcall *RedirectMemoryBlock) (void* OldAddr, int BlockSize, void* NewAddr);
ERA_API void* (__stdcall *GetRealAddr) (void* Addr);
ERA_API int (__stdcall *Hash32) (const char* data, int DataSize);
ERA_API int (__stdcall *SplitMix32) (int* seed, int MinValue, int MaxValue);
ERA_API void* (__stdcall *LoadImageAsPcx16) (const char* FilePath, const char* PcxName, int Width, int Height, int MaxWidth, int MaxHeight, EImageResizeAlg ResizeAlg);
ERA_API void (__stdcall *NameColor) (int Color32, const char* Name);
ERA_API void (__stdcall *ShowMessage) (const char *Message);
ERA_API int (__stdcall *FastQuitToGameMenu) (EGameMenuTarget TargetScreen);
ERA_API int (__stdcall *FormatQuantity) (int value, char* buffer, int BufSize, int MaxLen, int MaxDigits);
ERA_API int (__stdcall *DecorateInt) (int value, char* buffer, int IgnoreSmallNumbers);